# orthoSynAssign

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  README.md  orthoSynAssign.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_and_test.yml  publish_release.yml  version_bump.yml
example/: FungiDB-68_AfumigatusA1163.bed  FungiDB-68_AfumigatusAf293.bed  FungiDB-68_AnovofumigatusIBT16806.bed  Refined_SOGs.tsv  orthogroups.tsv
example/gff3/: FungiDB-68_AfumigatusA1163.gff3.gz.tbi  FungiDB-68_AfumigatusAf293.gff3.gz.tbi
misc/: convert_bed.sh  gff2bed.bash  gff2bed.py
orthoSynAssign/: __init__.py
orthoSynAssign/lib/: __init__.py  orthology.py  parsers.py
src/: lib.rs
src/orthosynassign/: __init__.py  _utils.py  main.py  refine.py  visualize.py
src/orthosynassign/lib/: __init__.py  _dsu.py  _gene.py  _orthogroup.py  _parsers.py  gene.py  orthogroup.py  orthology.py  parsers.py  rs.pyi  synteny.py
tests/: conftest.py  engine_test.py  gene_test.py  orthogroup_test.py  parsers_test.py  refine_test.py  synteny_test.py  test_parsers.py  visualize_test.py
tests/data/: Refined_SOGs_w4_r0.5.tsv  Refined_SOGs_w4_r0.8.tsv  Refined_SOGs_w6_r0.5.tsv  Refined_SOGs_w6_r0.8.tsv  Sample_A.bed  Sample_B.bed  Sample_C.bed  orthogroups.tsv
tests/data/Afum_3/: Orthogroups.locusnames.tsv  Orthogroups.tsv  convert_bed.sh
tests/data/Afum_3/bed/: FungiDB-68_AfumigatusA1163.bed
tests/data/Afum_3/gff3/: FungiDB-68_AnovofumigatusIBT16806.gff3.gz.tbi
tests/data/file_formats/: download.sh
