[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "orthoSynAssign"
authors = [
  { name = "Jason Stajich", email = "jasonstajich.phd@gmail.com" },
  { name = "Cheng-Hung Tsai", email = "chenghung.tsai@email.ucr.edu" },
]
maintainers = [
  { name = "Jason Stajich", email = "jasonstajich.phd@gmail.com" },
  { name = "Cheng-Hung Tsai", email = "chenghung.tsai@email.ucr.edu" },
]
license = { file = "LICENSE" }
description = "Ortholog Synteny Assignment Tool for analyzing OrthoFinder results with genome annotations."
readme = "README.md"
requires-python = ">=3.9,<3.14"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
orthosynassign = "orthosynassign.main:main"

[project.urls]
"Homepage" = "https://github.com/stajichlab/orthoSynAssign"
"Bug Tracker" = "https://github.com/stajichlab/orthoSynAssign/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -vv --order-dependencies"
testpaths = ["tests"]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E203", "E402", "E701"]
